Fixes flex alignment post-margin-wrapper.

--- a/style.scss
+++ b/style.scss
@@ -86,8 +86,11 @@ a {
     	z-index: 2;
     	padding-top: 0.5em;
     	padding-bottom: 0.5em;
-    	display: flex;
-    	align-items: center;
+
+		> .margin-wrapper {
+			display: flex;
+			align-items: center;
+		}
  	}
  	transition: background 0.4s;
  }
